k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yengec-developer-hub
  labels:
    app: yengec-developer-hub
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: yengec-developer-hub
  template:
    metadata:
      labels:
        app: yengec-developer-hub
    spec:
      imagePullSecrets:
        - name: dockerhub-pull-secret
      containers:
        - name: yengec-developer-hub
          image: salyangoz/yengec-developer-hub:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
